# IAS

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test_db.py  test_new.py
app/: __init__.py  database.py  main.py
app/models/: __init__.py  aircraft.py  failures.py  osob.py
app/ui/: __init__.py
app/ui/dialogs/: __init__.py  osob_features.py  plane_ispravnost.py  select_osob.py  settings.py
app/ui/dialogs/settings/: __init__.py  agregate.py  base.py  group.py  osob.py  plane_type.py  planes.py  podrazd.py  system.py  systems.py
app/ui/models/: __init__.py  base.py  ispravnost.py  reference.py  tables.py
app/ui/widgets/: __init__.py  buttons.py  combo_box.py  groups.py  tables.py
app/ui/widgets/tables/: __init__.py  agregate.py  agregate_table.py  base.py  base_table.py  group.py  group_table.py  ispravnost.py  ispravnost_table.py  osob.py  osobs_table.py  plane_types.py  plane_types_table.py  planes.py  planes_table.py  podrazd.py  podrazd_table.py  system.py  system_table.py
app/ui/windows/: __init__.py  main_window.py
custom_components/: buttons.py  combo_box.py  groups.py  tables.py  tables_models.py
data/: __init__.py  data.py  data_models.py  example.py  init_table.py  init_tables.py  models.py
data/models/: __init__.py  aircraft.py  base.py  failures.py  osob.py
forms/: __init__.py  custom_mod.py  main_form.py  otkaz_dialog.py  plane_ispravnost.py  settings.py
forms/custom_components/: __init__.py  buttons.py  groups.py  tables.py
forms/frames/: __init__.py  ispravnost.py
frames/: ispravnost.py
migrations/: 001_initial.py
tests/: __init__.py  conftest.py  test_db_models.py  test_models.py
